tooling/nargo_cli/tests/snapshots/execute__tests__conditional_regression_661_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "5057683500463620337",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VYTW/bMAylP+TUKYIE23nAbttudmLPKbBDD0vb/YEddhjgps11h103wFiBAfvXi1uxoV+o9MsKWgGGZOuJfKRI2nJANy1eX4EYty2k7caYY9tnT2t5j7KyQHD3xTfoka8vjuEL4Bi9AI6xB47XzUCAthsWKcFLgGvbP9untg/FfI9OzVPQ26f8eVYcpYp9PfKfpUKmB/kly4/9yM8GVs7npiufQG8EOG0NYxYCs3BgTgTmxIE5FZhTB+ZMYM4AM7LjgLY5s199xPU67nzvWzGi7l6RsJN1Gz+6ywD0EXVjhkD/kLzmSB6APuaD/uG9HjGm2fDBubjZtoPnjJjj/T1YX28ETostxr0X4w92zHvmsw76ive2vVb4S11tGzR029gfkXjGfmU/H0g8zKViLm66eob2PhZ6pCzmYQD/zt6PbZ+INbx+ouhPQH+Ht/IM/ZIq+FTBJ+vrrR0f2quNod+8hrzmWcZxLb8f9lRzpo+tOZ7q786aI/0j60o7lyhcJ8pcBOu0On8fn0gOE3K/3z2/r0r0l6Ftf8n64ZnP7f4NqOs7rFusf0zbezQQtkjbvtm+xX4C20JFX6LoQ38lDnzo4HBs+7Y+XNnxPnJU8pM2ajmKe5A48AnYyPiFYmMA6yWHUJG5y88hYCQHxn9ROOD7n+j510lf57tddVL657F1km0ak/v7w7PPM4z7WNhoFK6hYofMGQPPvtq+jbG/IE+L8121X4tp7b0gvzl+wpp91bDvtLH7yiFTctBsw71x5bcBDow/Vzho50rMb0/5dO/8Zv1DxR8+8luLCS0OtfzGGNVyf0zuPX4u+R0KWx+S3z9sr+W35letbk7IXf+0/GaczG+thuKaSOEj8fi9pJ2BfZ51i8tphlwN7a4RGh+i/nLEAJ9foNfXmfwV2CN1HdLm327c9K+/mt/kTdv47G6oGz8E+g3g/9j7oWLHU36ar6o6X83qVV3WFxfFskY/Efipb/1FWVfLusrzoyK/LPJy3/rrajZfTotldV7O6tnHO+3/D7rt/7q9GwAA",
  "debug_symbols": "tdjdaupAFIbhe5njHMxaa369lc2mRI0lEKJE3bAR772ToNamoeUrXSfiSJ43YJxknIvZNuvz60vb7/ZHs/pzMd1+U5/afV9Gl2tl1kPbde3ry/PHxo4vjqfjj4e6H4fHUz2czIqsrUzTb8d3VPyu7Rqz8vb6tzJOYOFg4WERYBFhkWCRUeEtLAgW8DX3y9ec6C4ozIWDxeI1Z3I3wWKfRfXpUC/hdqh3dh4PmvGoGA/2F+NuHifNOGvGRTO++ONl4Uc8zoWHRYBFhEWCxeINix+3Bpb09dfq5H6oczyLR6sZJ804a8ZFM+40414zHjTjUTOeNOOaMzRhM3QUBAuGhcDCwcLDIsAiwiKhIi+vH12+r7uC//lzMZNmnDXjohlfXuuKf8Tzz6dk9prxoBmPmvGkGc+K8fI/S7VOqnVWrYtq3anWsXk6kYCTiJOEkwwTsjghnDBOBCfwWqDsZiwSH+/k4/NlIhEn6RsS5RPJMGGLE8IJ40Qwci2jf/XQ1uuuuW2E7s795mlf9PT/0My2SA/DftNsz0Mzbpa+75OOp+ZcSZ7mRxkQ+4rETt/xOBQqQynnLOd9Aw==",
  "file_map": {
    "50": {
      "source": "fn main(a: u32, mut c: [u32; 4]) {\n    // Regression for issue #661:\n    let mut c_661: [u32; 1] = [0];\n    if a > 5 {\n        c_661 = issue_661_foo(issue_661_bar(c), a);\n    } else {\n        c_661 = issue_661_foo(issue_661_bar(c), a + 2);\n    }\n    assert(c_661[0] < 20000);\n}\n\nfn test5(a: u32) {\n    if a > 1 {\n        let q = a / 2;\n        assert(q == 2);\n    }\n}\n\nfn issue_661_foo(array: [u32; 4], b: u32) -> [u32; 1] {\n    [array[0] + b]\n}\n\nfn issue_661_bar(a: [u32; 4]) -> [u32; 4] {\n    let mut b: [u32; 4] = [0; 4];\n    b[0] = a[0] + 1;\n    b\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/conditional_regression_661/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
