tooling/nargo_cli/tests/snapshots/execute__tests__custom_entry_force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12866931251655290249",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/6WOQQqAMAwELfigpEnazc2vWEz//wQRKgqiF+eysIdh0nSRpifnt4ylf/DdJVRUo+Zg4ZWyNxiptQIGG2zLEAkoqjev5KwS3M2lD9nRNn+0v7EDo/0phPQAAAA=",
  "debug_symbols": "TYxLCsMwDAXvonUWKaUUfJVSgj9yEBjZyHahmNy9SmggO80bNAMCur4uxDFXMK8BKXvbKLPSgPmYarG8U21WGpj7bQLkoMdzmyBSQjCPeXsrOKGUaF2uEZ0/Vsi6hH+Mnf3Ftm85zflfJHsMXXAvHU7zPw==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    assert(x == 1);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/custom_entry/src/foobarbaz.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
